--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -6,55 +6,76 @@
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+<header id="header"></header>
 <div class="container">
-	<form action="/admin/product" method="post" enctype="multipart/form-data">	
+	<form  th:action="@{/admin/product}" method="post" th:object=${product}>
+	
+		<label for="cod" class="form-label">Codigo</label>
 		<div class="input-group mb-3">
-		  <input th:value="${product.title}" type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1">
+		  <input th:field=*{cod} type="text" class="form-control" placeholder="codigo" name="cod" aria-label="cod" aria-describedby="basic-addon1">
 		</div>
 		
+		<label for="title" class="form-label">Titulo</label>
 		<div class="input-group mb-3">
-		  <select class="form-select" aria-label="Default select example">
-			  <option th:each="c : ${category}" th:value="${c.id}" th:text="${c.title}"></option>
+		  <input th:field=*{title} type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1">
+		</div>
+		
+		<label for="picture" class="form-label">Imagen</label>
+		<div class="input-group mb-3">
+		  <input th:field=*{picture} type="text" class="form-control" placeholder="picture" name="picture" aria-label="picture" aria-describedby="basic-addon1">
+		</div>
+		
+		<label for="subtitle" class="form-label">SubTitulo</label>
+		<div class="input-group mb-3">
+		  <input th:field="*{subtitle}" type="text" class="form-control" placeholder="subtitle" name="subtitle" aria-label="subtitle" aria-describedby="basic-addon1">
+		</div>
+		
+		<label for="category" class="form-label">Categoria</label>
+		<div class="input-group mb-3">
+		  <select class="form-select form-control" name="category" aria-label="Default select example" th:field="*{category}">
+			  <option th:each="c : ${category}" th:value=" ${c.id}" th:text="${c.title}"></option>
 			</select>
 		</div>
 		
+		<label for="subcategory" class="form-label">SubCategoria</label>
 		<div class="input-group mb-3">
-		  <select class="form-select" aria-label="Default select example">
-			  <optgroup th:each="c : ${category}" th:text="${c.title}">
-				  <option th:each="s : ${subcategory}"  th:value="${s.id}" th:text="${s.title}"></option>				  
-			  </optgroup> 
+		  <select class="form-select form-control" name="subCategory" aria-label="Default select example" th:field="*{subCategory}">
+				  <option th:each="s : ${subcategory}"  th:value="${s.id}" th:text="${s.title}"></option>				   
 			</select>
-		</div>
-		
-		<div class="input-group mb-3">
-		  <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-		</div>
-		
-		<div class="mb-3">
-		  <label for="basic-url" class="form-label">Your vanity URL</label>
-		  <div class="input-group">
-		    <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-		  </div>
 		</div>
 		
 		<div class="input-group mb-3">
 		  <span class="input-group-text">$</span>
-		  <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+		  <input th:field="*{unit_price}" type="text" class="form-control" name="unit_price" aria-label="Amount (to the nearest dollar)">
 		  <span class="input-group-text">.00</span>
+		  
+		  <span class="input-group-text">Total</span>
+		  <input th:field="*{current_price}" type="text" class="form-control" name="current_price" aria-label="Amount (to the nearest dollar)">
+		  <span class="input-group-text">.00</span>
+		  
+			<span class="input-group-text">TAX</span>
+		  <input th:field="*{iva_price}" type="text" class="form-control"  name="iva_price" aria-label="Amount (to the nearest dollar)">
+		  <span class="input-group-text">%</span>
+		</div>
+		
+		<div class="input-group mb-3" >
+		  <span class="input-group-text">Descripcion</span>
+		  <textarea class="form-control" aria-label="With textarea" name="description" th:field="*{description}"></textarea>
 		</div>
 		
 		<div class="input-group mb-3">
-		  <input type="text" class="form-control" placeholder="Username" aria-label="Username">
-		  <input type="text" class="form-control" placeholder="Server" aria-label="Server">
+		  <span class="input-group-text">Resumen</span>
+		  <textarea class="form-control" aria-label="With textarea" name="textSummary" th:field="*{textSummary}"></textarea>
 		</div>
 		
-		<div class="input-group">
-		  <span class="input-group-text">With textarea</span>
-		  <textarea class="form-control" aria-label="With textarea"></textarea>
+		<div class="input-group mb-3">
+		  <span class="input-group-text">Info</span>
+		  <textarea class="form-control" aria-label="With textarea"  name="info" th:field="*{info}"></textarea>
 		</div>
-		<button>submit</button>
+		<button id="submit">submit</button>
 	</form>
 </div>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+ <script src="/script.js"></script>
 </body>
 </html>
