--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -5,32 +5,42 @@
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-	
-	<table border="1" class="table">
-                <thead>
-                    <tr>
-                        <th>Titulo</th>
-                        <th>Categoria</th>
-                        <th>Precio actual</th>
-                        <th>Precio unitario</th>
-                        <th>Porcentaje de impuesto</th>
-                    </tr>
-                </thead>
+	<header id="header"></header>
+	<div class="container">
+		<table border="1" class="table">
+             <thead>
+                 <tr>
+                 	<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
+                 	<th>Cod</th>
+                     <th>Titulo</th>
+                     <th>Categoria</th>
+                     <th>SubCategoria</th>
+                     <th>Precio actual</th>
+                     <th>Precio unitario</th>
+                     <th>IVA %</th>
+                 </tr>
+             </thead>
                 <tbody>
-                    <tr th:each="p : ${products}">
-						<td><input type="checkbox" name="product" th:value="${p.id}"></td>
+                    <tr th:each="p : ${products}" th:data-href="${p.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
+						<td><input type="checkbox" name="product" th:value="${p.id}" th:data-id="${p.id}"></td>
+						<td th:text="${p.cod}"></td>
                         <td th:text="${p.title}"></td>
-                        <td th:text="${p.category}"></td>
+                        <td th:text="${p.category.title != null}? ${p.category.title} : ''"></td>
+                        <td th:text="${p.subCategory != null}? ${p.subCategory.title}  : ''"></td>
                         <td th:text="${p.current_price}"></td>
                         <td th:text="${p.unit_price}"></td>
-                        <td th:text="${p.iva_price}"></td>
+                        <td th:text="${p.iva_price}+'%'"></td>
                         <td> <a th:href="'/admin/product/'+ ${p.id}"><button class="btn btn-warning">Editar</button></a></td>
-                        <td><button class="btn btn-danger">Eliminar</button></td>
+                        <td> <button class="btn btn-danger" onclick="deleteItem(this)" th:data-id="${p.id}">Eliminar</button></td>
                     </tr>
                 </tbody>
             </table>
-	<script>
-
-	</script>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+			<a href="/admin/product/0"><button class="btn btn-primary">Agregar</button></a>
+			<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+		</div>
+	</div>
+    <script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="/script.js"></script>
 </body>
 </html>
