--- a/src/main/resources/templates/Category.html
+++ b/src/main/resources/templates/Category.html
@@ -8,7 +8,7 @@
 <body>
 <header id="header"></header>
 <div class="container">
-	<form th:action="@{/admin/category}" method="post" th:object="${category}"> 
+	<form action="/admin/category" method="post" th:object="${category}" enctype="multipart/form-data"> 
 		
 		  <input  type="text" th:field="*{id}" hidden="hidden">
 		<label for="title" class="form-label">Titulo</label>
@@ -18,6 +18,7 @@
 		<label for="picture" class="form-label">imagen</label>
 		<div class="input-group mb-3">
 		  <input  type="text" class="form-control" placeholder="img" name="picture" aria-label="title" aria-describedby="basic-addon1" th:field="*{picture}">
+		  <input type="file" name="image"/>
 		</div>
 		
 		<button id="submit">submit</button>
