add front with purchase

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,6 +16,15 @@
           <a class="nav-link" href="/admin/subcategory">Subcategorias</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/admin/landing">Landing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/purchase">Purchase</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/banner">Banners</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
       </ul>
