--- a/src/main/resources/templates/landing_list.html
+++ b/src/main/resources/templates/landing_list.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Admin</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 		<header id="header"></header>
@@ -17,7 +18,7 @@
                  </tr>
              </thead>
                 <tbody>
-                    <tr th:each="l : ${landing}" th:data-href="${l.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
+                    <tr th:each="l : ${landing}" th:class="${l.cssClass}" th:data-href="${l.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
 						<td><input type="checkbox" name="landing" th:value="${l.id}" th:data-id="${l.id}"></td>
                         <td th:text="${l.name}"></td>
                         <td th:text="${l.active}"></td>
