--- a/src/main/resources/templates/purchase_list.html
+++ b/src/main/resources/templates/purchase_list.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <title>Admin</title>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+ <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 	<header id="header"></header>
@@ -11,26 +12,28 @@
              <thead>
                  <tr>
                  	<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
-                 	<th>Cod</th>
+                 	<th>Codigo</th>
                      <th>Usuario</th>
                      <th>Fecha</th>
                      <th>Precio total</th>
-                     <th>IVA %</th>
-                     <th>Precio c/IVA</th>
+                     <th>Metodo de pago</th>
+                     <th>Tipo</th>
+                     <th>Precio total</th>
                      <th>status</th>
                  </tr>
              </thead>
                 <tbody>
-                    <tr th:each="p : ${Purchases}" th:data-href="${p.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
+                    <tr th:each="p : ${Purchases}" th:class="${p.cssClass}" th:style="${p.cssStyle}" th:data-href="${p.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
 						<td><input type="checkbox" name="product" th:value="${p.id}" th:data-id="${p.id}"></td>
-						<td th:text="${p.cod}"></td>
-                        <td th:text="${p.user}"></td>
+						<td th:text="${p.purchaseId}"></td>
+                        <td th:text="${p.user.username}"></td>
                         <td th:text="${p.date}"></td>
                         <td th:text="${p.amount}"></td>
-                        <td th:text="${p.amountIva}+'%'"></td>
+                        <td th:text="${p.paymentMethodId}"></td>
+                        <td th:text="${p.paymentTypeId}"></td>
                         <td th:text="${p.amountTotal}"></td>
                         <td th:text="${p.status}"></td>
-                        <td> <a th:href="'/admin/product/'+ ${p.id}"><button class="btn btn-warning">Editar</button></a></td>
+                        <td> <a th:href="'/admin/purchase/'+ ${p.id}"><button class="btn btn-warning">Editar</button></a></td>
                         <td> <button class="btn btn-danger" onclick="deleteItem(this)" th:data-id="${p.id}">Eliminar</button></td>
                     </tr>
                 </tbody>
