--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -77,6 +77,11 @@
 		  <span class="input-group-text">Info</span>
 		  <textarea class="form-control" aria-label="With textarea"  name="info" th:field="*{info}"></textarea>
 		</div>
+		
+		<label>Stock</label>
+		<div class="input-group mb-3">
+		  <input th:field="*{stock}" type="text" class="form-control"  name="stock">
+		</div>
 		<button id="submit">submit</button>
 	</form>
 </div>
