--- a/src/main/resources/templates/purchase_list.html
+++ b/src/main/resources/templates/purchase_list.html
@@ -8,7 +8,7 @@
 <body>
 	<header id="header"></header>
 	<div class="container">
-		<table border="1" class="table">
+		<table border="1" class="table table-sm">
              <thead>
                  <tr>
                  	<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
