--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -1,84 +1,98 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-<header id="header"></header>
-<div class="container">
-	<form  th:action="@{/admin/purchase}" method="post" th:object=${purchase}>
-	
-		<label for="cod" class="form-label">Codigo</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{purchaseId} type="text" class="form-control" placeholder="codigo" name="cod" aria-label="cod" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="user" class="form-label">Usuario</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{user.username} type="text" class="form-control" placeholder="user" name="user" aria-label="user" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="date" class="form-label">Fecha</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{date} type="text" class="form-control" placeholder="date" name="date" aria-label="date" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="installments" class="form-label">installments</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{installments}" type="text" class="form-control" placeholder="installments" name="installments" aria-label="installments" aria-describedby="basic-addon1">
-		</div>
-		
-		<div class="input-group mb-3" >
-			<label>Products</label>
-			<div th:each="b, stat : *{purchaseProduct}">
-				<p th:text="*{purchaseProduct[__${stat.index}__].product.title}"></p>
-				<div style="width: 200px; height: 200px;">
-					<img alt="" th:src="*{'/update/' + purchaseProduct[__${stat.index}__].product.picture}" style="width: 100%; height: 100%; object-fit:contain;">
+	<div id="root">
+		<div th:replace="sidebar :: div#sidebar"></div>
+		<div id="detail">
+			<form th:action="@{/admin/purchase}" method="post" th:object=${purchase}>
+				<input th:field=*{id} type="text" class="form-control" name="id" aria-label="id"
+					aria-describedby="basic-addon1" hidden="hidden">
+				<label for="cod" class="form-label">Codigo</label>
+				<div class="input-group mb-3">
+					<input th:field=*{purchaseId} type="text" class="form-control" placeholder="codigo" name="cod"
+						aria-label="cod" aria-describedby="basic-addon1">
 				</div>
-			</div>
+
+				<label for="user" class="form-label">Usuario</label>
+				<div class="input-group mb-3">
+					<input th:field=*{user.id} type="text" class="form-control" placeholder="user" name="user"
+						aria-label="user" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="date" class="form-label">Fecha</label>
+				<div class="input-group mb-3">
+					<input th:field=*{date} type="text" class="form-control" placeholder="date" name="date"
+						aria-label="date" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="installments" class="form-label">installments</label>
+				<div class="input-group mb-3">
+					<input th:field="*{installments}" type="text" class="form-control" placeholder="installments"
+						name="installments" aria-label="installments" aria-describedby="basic-addon1">
+				</div>
+
+				<div class="input-group mb-3">
+					<label>Products</label>
+					<div th:each="b, stat : *{purchaseProduct}">
+						<p th:text="*{purchaseProduct[__${stat.index}__].product.title}"></p>
+						<div style="width: 200px; height: 200px;">
+							<img alt="" th:src="*{'/update/' + purchaseProduct[__${stat.index}__].product.picture}"
+								style="width: 100%; height: 100%; object-fit:contain;">
+						</div>
+					</div>
+				</div>
+
+				<div class="input-group mb-3">
+
+					<span class="input-group-text">Total</span>
+					<input th:field="*{amount}" type="text" class="form-control" name="amount"
+						aria-label="Amount (to the nearest dollar)">
+					<span class="input-group-text">.00</span>
+
+					<span class="input-group-text">TAX</spa>
+						<input th:field="*{amountIva}" type="text" class="form-control" name="amountIva"
+							aria-label="Amount (to the nearest dollar)">
+						<span class="input-group-text">%</span>
+
+						<span class="input-group-text">amountTotal</span>
+						<input th:field="*{amountTotal}" type="text" class="form-control" name="amountTotal"
+							aria-label="Amount (to the nearest dollar)">
+						<span class="input-group-text">.00</span>
+				</div>
+
+				<label for="paymentMethodId" class="form-label">paymentMethodId</label>
+				<div class="input-group mb-3">
+					<input th:field=*{paymentMethodId} type="text" class="form-control" placeholder="paymentMethodId"
+						name="paymentMethodId" aria-label="paymentMethodId" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="paymentTypeId" class="form-label">paymentTypeId</label>
+				<div class="input-group mb-3">
+					<input th:field=*{paymentTypeId} type="text" class="form-control" placeholder="paymentTypeId"
+						name="paymentTypeId" aria-label="paymentTypeId" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="status" class="form-label">status</label>
+				<div class="input-group mb-3">
+					<input th:field=*{status} type="text" class="form-control" placeholder="status" name="status"
+						aria-label="paymentTypeId" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="statusDetailed" class="form-label">statusDetailed</label>
+				<div class="input-group mb-3">
+					<input th:field=*{statusDetailed} type="text" class="form-control" placeholder="statusDetailed"
+						name="statusDetailed" aria-label="statusDetailed" aria-describedby="basic-addon1">
+				</div>
+
+				<button id="submit">submit</button>
+			</form>
 		</div>
-		
-		<div class="input-group mb-3">
-		  
-		  <span class="input-group-text">Total</span>
-		  <input th:field="*{amount}" type="text" class="form-control" name="amount" aria-label="Amount (to the nearest dollar)">
-		  <span class="input-group-text">.00</span>
-		  
-		  <span class="input-group-text">TAX</spa>
-		  <input th:field="*{amountIva}" type="text" class="form-control"  name="amountIva" aria-label="Amount (to the nearest dollar)">
-		  <span class="input-group-text">%</span>
-		  
-		  <span class="input-group-text">amountTotal</span>
-		  <input th:field="*{amountTotal}" type="text" class="form-control" name="amountTotal" aria-label="Amount (to the nearest dollar)">
-		  <span class="input-group-text">.00</span>
-		</div>
-		
-		<label for="paymentMethodId" class="form-label">paymentMethodId</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{paymentMethodId} type="text" class="form-control" placeholder="paymentMethodId" name="paymentMethodId" aria-label="paymentMethodId" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="paymentTypeId" class="form-label">paymentTypeId</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{paymentTypeId} type="text" class="form-control" placeholder="paymentTypeId" name="paymentTypeId" aria-label="paymentTypeId" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="status" class="form-label">status</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{status} type="text" class="form-control" placeholder="status" name="status" aria-label="paymentTypeId" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="statusDetailed" class="form-label">statusDetailed</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{statusDetailed} type="text" class="form-control" placeholder="statusDetailed" name="statusDetailed" aria-label="statusDetailed" aria-describedby="basic-addon1">
-		</div>
-		
-		<button id="submit">submit</button>
-	</form>
-</div>
-<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
- <script src="/script.js"></script>
+	</div>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="/script.js"></script>
 </body>
+
 </html>
