--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,3 +3,114 @@
 .in_process>td{background-color: #F9E79F!important;}
 
 .no-active>td{background: #eee!important;}
+
+
+#root{
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+}
+
+#sidebar{
+    width: 18rem;
+    background-color:/* #f7f7f7*/#273746 ;
+    border-right: solid 1px #e3e3e3;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+#sidebar h1{
+    font-size: 1rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 1rem 2rem;
+    border-top: 1px solid /*#e3e3e3*/#1C2833;
+    order: 1;
+    line-height: 1;
+}
+
+#sidebar > div {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid /*#e3e3e3*/#1C2833;
+}
+
+#sidebar > div form {
+    position: relative;
+}
+
+#sidebar nav {
+    flex: 1;
+    overflow: auto;
+    padding-top: 1rem;
+}
+
+#sidebar > * {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+#sidebar ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+#sidebar nav a.active {
+    background: hsl(224, 98%, 58%);
+    color: white;
+}
+
+#sidebar nav a.active {
+    background: /*hsl(224, 98%, 58%)*/#17202A;
+    color: white;
+}
+
+#sidebar nav a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+    white-space: pre;
+    padding: 0.5rem;
+    border-radius: 8px;
+    color: inherit;
+    text-decoration: none;
+    gap: 1rem;
+}
+
+#sidebar > div form input[type="search"] {
+    width: 100%;
+    padding-left: 2rem;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: 0.625rem 0.75rem;
+    background-size: 1rem;
+    position: relative;
+}
+
+textarea, input, button {
+    font-size: 1rem;
+    font-family: inherit;
+    border: none;
+    border-radius: 8px;
+    padding: 0.5rem 0.75rem;
+    box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.2), 0 1px 2px hsla(0, 0%, 0%, 0.2);
+    background-color: white;
+    line-height: 1.5;
+    margin: 0;
+}
+
+#detail {
+    flex: 1;
+    padding: 2rem 1rem;
+    width: 100%;
+    overflow: auto;
+}
