--- a/src/main/resources/templates/Category.html
+++ b/src/main/resources/templates/Category.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-<header id="header"></header>
-<div class="container">
-	<form action="/admin/category" method="post" th:object="${category}" enctype="multipart/form-data"> 
-		
-		  <input  type="text" th:field="*{id}" hidden="hidden">
-		<label for="title" class="form-label">Titulo</label>
-		<div class="input-group mb-3">
-		  <input  type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1" th:field="*{title}">
+	<div id="root">
+		<div th:replace="sidebar :: div#sidebar"></div>
+		<div id="detail">
+			<form action="/admin/category" method="post" th:object="${category}" enctype="multipart/form-data">
+
+				<input type="text" th:field="*{id}" hidden="hidden">
+				<label for="title" class="form-label">Titulo</label>
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="title" name="title" aria-label="title"
+						aria-describedby="basic-addon1" th:field="*{title}">
+				</div>
+				<label for="picture" class="form-label">imagen</label>
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="img" name="picture" aria-label="title"
+						aria-describedby="basic-addon1" th:field="*{picture}">
+					<input type="file" name="image" />
+				</div>
+
+				<button id="submit">submit</button>
+			</form>
 		</div>
-		<label for="picture" class="form-label">imagen</label>
-		<div class="input-group mb-3">
-		  <input  type="text" class="form-control" placeholder="img" name="picture" aria-label="title" aria-describedby="basic-addon1" th:field="*{picture}">
-		  <input type="file" name="image"/>
-		</div>
-		
-		<button id="submit">submit</button>
-	</form>
-</div>
-<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	</div>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
 	<script>
 		window.addEventListener('load', _ => {
 			$('#header').load('/header'/*, setSwipperHistorial()*/);
-		});	
-		
+		});
+
 		/*const send = document.querySelector("#submit");
 		const form = document.querySelectorAll("#form input");
 		
@@ -38,7 +40,8 @@
 			console.log(form);
 			
 		})*/
-		
+
 	</script>
 </body>
+
 </html>
