--- a/src/main/resources/templates/banner_list.html
+++ b/src/main/resources/templates/banner_list.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-		<header id="header"></header>
-	<div class="container">
-		<table border="1" class="table">
-             <thead>
-                 <tr>
-                 	<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
-                     <th>Name</th>
-                 </tr>
-             </thead>
-                <tbody>
-                    <tr th:each="b : ${banner}" th:data-href="${b.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
+	<div id="root">
+		<div th:replace="sidebar :: div#sidebar"></div>
+		<div id="detail">
+			<table border="1" class="table table-sm">
+				<thead>
+					<tr>
+						<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
+						<th>Name</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="b : ${banner}" th:data-href="${b.id}"
+						ondblclick="location.href=location.pathname+'/'+this.dataset.href">
 						<td><input type="checkbox" name="banner" th:value="${b.id}" th:data-id="${b.id}"></td>
-                        <td th:text="${b.name}"></td>
-                        <td> <a th:href="'/admin/banner/'+ ${b.id}"><button class="btn btn-warning">Editar</button></a></td>
-                        <td> <button class="btn btn-danger" onclick="deleteItem(this)" th:data-id="${b.id}">Eliminar</button></td>
-                    </tr>
-                </tbody>
-            </table>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-			<a href="/admin/product/0"><button class="btn btn-primary">Agregar</button></a>
-			<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+						<td th:text="${b.name}"></td>
+						<td> <a th:href="'/admin/banner/'+ ${b.id}"><button class="btn btn-warning">Editar</button></a>
+						</td>
+						<td> <button class="btn btn-danger" onclick="deleteItem(this)"
+								th:data-id="${b.id}">Eliminar</button></td>
+					</tr>
+				</tbody>
+			</table>
+			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+				<a href="/admin/product/0"><button class="btn btn-primary">Agregar</button></a>
+				<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+			</div>
 		</div>
 	</div>
-    <script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
 	<script src="/script.js"></script>
 </body>
+
 </html>
