--- a/src/main/resources/templates/email_template.html
+++ b/src/main/resources/templates/email_template.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-<header id="header"></header>
-<div class="container">
-	<form  id="form" th:action="@{/admin/emailTemplate}" method="post" th:object="${emailTemplate}">
-		
-		<input type="text" th:field="*{id}" hidden="hidden">
-		<label for="name" class="form-label">Nombre</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{name}" type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1">
+	<div id="root">
+		<div th:replace="sidebar :: div#sidebar"></div>
+		<div id="detail">
+			<form id="form" th:action="@{/admin/emailTemplate}" method="post" th:object="${emailTemplate}">
+
+				<input type="text" th:field="*{id}" hidden="hidden">
+				<label for="name" class="form-label">Nombre</label>
+				<div class="input-group mb-3">
+					<input th:field="*{name}" type="text" class="form-control" placeholder="title" name="title"
+						aria-label="title" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="name" class="form-label">Asunto</label>
+				<div class="input-group mb-3">
+					<input th:field="*{subject}" type="text" class="form-control" placeholder="title" name="title"
+						aria-label="title" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="name" class="form-label">Codigo</label>
+				<div class="input-group mb-3">
+					<input th:field="*{code}" type="text" class="form-control" placeholder="title" name="title"
+						aria-label="title" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="isHtml" class="form-label">Html</label>
+				<div class="input-group mb-3">
+					<input th:field="*{isHtml}" class="form-check-input" type="checkbox">
+				</div>
+
+				<label for="isHtml" class="form-label">Activo</label>
+				<div class="input-group mb-3">
+					<input th:field="*{active}" class="form-check-input" type="checkbox">
+				</div>
+
+				<label for="category" class="form-label">Body</label>
+				<div class="input-group mb-3">
+					<textarea rows="" cols="" th:field="*{body}"></textarea>
+				</div>
+
+				<button>submit</button>
+
+			</form>
 		</div>
-		
-		<label for="name" class="form-label">Asunto</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{subject}" type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="name" class="form-label">Codigo</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{code}" type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="isHtml" class="form-label">Html</label>
-		<div class="input-group mb-3">
-		   <input th:field="*{isHtml}" class="form-check-input" type="checkbox" >
-		</div>
-		
-		<label for="isHtml" class="form-label">Activo</label>
-		<div class="input-group mb-3">
-		   <input th:field="*{active}" class="form-check-input" type="checkbox" >
-		</div>
-		
-		<label for="category" class="form-label">Body</label>
-		<div class="input-group mb-3">
-			<textarea rows="" cols="" th:field="*{body}"></textarea>
-		</div>
-		
-		<button>submit</button>
-		
-	</form>
-</div>
-<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
-<script src="/script.js"></script>
+	</div>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="/script.js"></script>
 </body>
+
 </html>
