--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-<header id="header"></header>
-<div class="container">
-	<form  id="form" th:action="@{/admin/landing}" method="post" th:object="${landing}">
-		
-		<input type="text" th:field="*{id}" hidden="hidden">
-		<label for="name" class="form-label">name</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{name}" type="text" class="form-control" placeholder="name" name="name" aria-label="name" aria-describedby="basic-addon1">
+	<div id="root">
+
+		<div th:replace="sidebar :: div#sidebar"></div>
+
+		<div id="detail">
+			<form id="form" th:action="@{/admin/landing}" method="post" th:object="${landing}">
+
+				<input type="text" th:field="*{id}" hidden="hidden">
+				<label for="name" class="form-label">name</label>
+				<div class="input-group mb-3">
+					<input th:field="*{name}" type="text" class="form-control" placeholder="name" name="name"
+						aria-label="name" aria-describedby="basic-addon1">
+				</div>
+				<label for="banner" class="form-label">Banner</label>
+				<div class="input-group mb-3">
+					<select class="form-select" aria-label="Default select example" th:field="*{banner}">
+						<option th:each="c : ${banners}" th:value="${c.id}" th:text="${c.name}"></option>
+					</select>
+				</div>
+				<label for="icon" class="form-label">Icons</label>
+				<div class="input-group mb-3">
+					<select class="form-select" aria-label="Default select example" th:field="*{icon}">
+						<option th:each="c : ${icons}" th:value="${c.id}" th:text="${c.name}"></option>
+					</select>
+				</div>
+
+				<label for="active" class="form-label">Active</label>
+				<div class="input-group mb-3">
+					<input th:field="*{active}" class="form-check-input" type="checkbox">
+				</div>
+				<label for="showOngs" class="form-label">ONGS</label>
+				<div class="input-group mb-3">
+					<input th:field="*{showOngs}" class="form-check-input" type="checkbox">
+				</div>
+
+				<label for="showPayments" class="form-label">Payment Methods</label>
+				<div class="input-group mb-3">
+					<input th:field="*{showPayments}" class="form-check-input" type="checkbox">
+				</div>
+
+				<button>submit</button>
+
+			</form>
 		</div>
-		<label for="banner" class="form-label">Banner</label>
-		<div class="input-group mb-3">
-		  <select class="form-select" aria-label="Default select example" th:field="*{banner}">
-			  <option th:each="c : ${banners}" th:value="${c.id}" th:text="${c.name}"></option>
-			</select>
-		</div>
-		<label for="icon" class="form-label">Icons</label>
-		<div class="input-group mb-3">
-		  <select class="form-select" aria-label="Default select example" th:field="*{icon}">
-			  <option th:each="c : ${icons}" th:value="${c.id}" th:text="${c.name}"></option>
-			</select>
-		</div>
-		
-		<label for="active" class="form-label">Active</label>
-		<div class="input-group mb-3">
-		   <input th:field="*{active}" class="form-check-input" type="checkbox" >
-		</div>
-		<label for="showOngs" class="form-label">ONGS</label>
-		<div class="input-group mb-3">
-		   <input th:field="*{showOngs}" class="form-check-input" type="checkbox" >
-		</div>
-		
-		<label for="showPayments" class="form-label">Payment Methods</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{showPayments}" class="form-check-input" type="checkbox" >
-		</div>
-		
-		<button>submit</button>
-		
-	</form>
-</div>
-<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
-<script src="/script.js"></script>
+	</div>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="/script.js"></script>
 </body>
+
 </html>
