--- a/src/main/resources/templates/payment_methods.html
+++ b/src/main/resources/templates/payment_methods.html
@@ -1,49 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-<header id="header"></header>
-<div class="container">
-	<form action="/admin/payment" method="post" th:object="${payment}" enctype="multipart/form-data"> 
-		
-		<input  type="text" th:field="*{id}" hidden="hidden">
-		<label for="name" class="form-label">Nombre</label>
-		<div class="input-group mb-3">
-		  <input  type="text" class="form-control" placeholder="name" name="name" aria-label="name" aria-describedby="basic-addon1" th:field="*{name}">
-		</div>
-		<label for="image" class="form-label">imagen</label>
-		<div class="input-group mb-3">
-		  <input  type="text" class="form-control" placeholder="img" name="image" aria-label="image" aria-describedby="basic-addon1" th:field="*{image}">
-		  <input type="file" name="img"/>
-		</div>
-		<label for="description" class="form-label"></label>
-		<div class="input-group mb-3">
-		  <textarea  type="text" class="form-control" placeholder="description" name="description" aria-label="description" aria-describedby="basic-addon1" th:field="*{description}">
+	<div id="root">
+
+		<div th:replace="sidebar :: div#sidebar"></div>
+
+		<div id="detail">
+			<form action="/admin/payment" method="post" th:object="${payment}" enctype="multipart/form-data">
+
+				<input type="text" th:field="*{id}" hidden="hidden">
+				<label for="name" class="form-label">Nombre</label>
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="name" name="name" aria-label="name"
+						aria-describedby="basic-addon1" th:field="*{name}">
+				</div>
+				<label for="image" class="form-label">imagen</label>
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="img" name="image" aria-label="image"
+						aria-describedby="basic-addon1" th:field="*{image}">
+					<input type="file" name="img" />
+				</div>
+				<label for="description" class="form-label"></label>
+				<div class="input-group mb-3">
+					<textarea type="text" class="form-control" placeholder="description" name="description"
+						aria-label="description" aria-describedby="basic-addon1" th:field="*{description}">
 		</textarea>
+				</div>
+
+				<button id="submit">submit</button>
+			</form>
 		</div>
-		
-		<button id="submit">submit</button>
-	</form>
-</div>
-<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
-	<script>
-		window.addEventListener('load', _ => {
-			$('#header').load('/header'/*, setSwipperHistorial()*/);
-		});	
-		
-		/*const send = document.querySelector("#submit");
-		const form = document.querySelectorAll("#form input");
-		
-		send.addEventListener('click', (e) => {
-			e.preventDefault(e);
-			console.log(form);
-			
-		})*/
-		
-	</script>
+	</div>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="/script.js"></script>
 </body>
+
 </html>
