--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,91 +1,106 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-<header id="header"></header>
-<div class="container">
-	<form action="/admin/product" method="post" th:object=${product} enctype="multipart/form-data">
-		<input th:field=*{id} type="text" class="form-control"  name="id" aria-label="id" aria-describedby="basic-addon1" hidden="hidden">
-		<label for="cod" class="form-label">Codigo</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{cod} type="text" class="form-control" placeholder="codigo" name="cod" aria-label="cod" aria-describedby="basic-addon1">
+	<div id="root">
+
+		<div th:replace="sidebar :: div#sidebar"></div>
+
+		<div id="detail">
+			<form action="/admin/product" method="post" th:object=${product} enctype="multipart/form-data">
+				<input th:field=*{id} type="text" class="form-control" name="id" aria-label="id"
+					aria-describedby="basic-addon1" hidden="hidden">
+				<label for="cod" class="form-label">Codigo</label>
+				<div class="input-group mb-3">
+					<input th:field=*{cod} type="text" class="form-control" placeholder="codigo" name="cod"
+						aria-label="cod" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="title" class="form-label">Titulo</label>
+				<div class="input-group mb-3">
+					<input th:field=*{title} type="text" class="form-control" placeholder="title" name="title"
+						aria-label="title" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="picture" class="form-label">Imagen</label>
+				<div style="width: 200px; height: 200px;">
+					<img width="100%" height="100%" style="object-fit:contain;" alt="" th:src="*{'/update/'+picture}">
+
+				</div>
+				<div class="input-group mb-3">
+					<input th:field=*{picture} type="text" class="form-control" placeholder="picture" name="picture"
+						aria-label="picture" aria-describedby="basic-addon1">
+					<input type="file" name="image" />
+				</div>
+
+				<label for="subtitle" class="form-label">SubTitulo</label>
+				<div class="input-group mb-3">
+					<input th:field="*{subtitle}" type="text" class="form-control" placeholder="subtitle"
+						name="subtitle" aria-label="subtitle" aria-describedby="basic-addon1">
+				</div>
+
+				<label for="category" class="form-label">Categoria</label>
+				<div class="input-group mb-3">
+					<select class="form-select form-control" name="category" aria-label="Default select example"
+						th:field="*{category}">
+						<option th:each="c : ${category}" th:value=" ${c.id}" th:text="${c.title}"></option>
+					</select>
+				</div>
+
+				<label for="subcategory" class="form-label">SubCategoria</label>
+				<div class="input-group mb-3">
+					<select class="form-select form-control" name="subCategory" aria-label="Default select example"
+						th:field="*{subCategory}">
+						<option th:each="s : ${subcategory}" th:value="${s.id}" th:text="${s.title}"></option>
+					</select>
+				</div>
+
+				<div class="input-group mb-3">
+					<span class="input-group-text">$</span>
+					<input th:field="*{unit_price}" type="text" class="form-control" name="unit_price"
+						aria-label="Amount (to the nearest dollar)">
+					<span class="input-group-text">.00</span>
+
+					<span class="input-group-text">Total</span>
+					<input th:field="*{current_price}" type="text" class="form-control" name="current_price"
+						aria-label="Amount (to the nearest dollar)">
+					<span class="input-group-text">.00</span>
+
+					<span class="input-group-text">TAX</span>
+					<input th:field="*{iva_price}" type="text" class="form-control" name="iva_price"
+						aria-label="Amount (to the nearest dollar)">
+					<span class="input-group-text">%</span>
+				</div>
+
+				<div class="input-group mb-3">
+					<span class="input-group-text">Descripcion</span>
+					<textarea class="form-control" aria-label="With textarea" name="description"
+						th:field="*{description}"></textarea>
+				</div>
+
+				<div class="input-group mb-3">
+					<span class="input-group-text">Resumen</span>
+					<textarea class="form-control" aria-label="With textarea" name="textSummary"
+						th:field="*{textSummary}"></textarea>
+				</div>
+
+				<div class="input-group mb-3">
+					<span class="input-group-text">Info</span>
+					<textarea class="form-control" aria-label="With textarea" name="info" th:field="*{info}"></textarea>
+				</div>
+
+				<label>Stock</label>
+				<div class="input-group mb-3">
+					<input th:field="*{stock}" type="text" class="form-control" name="stock">
+				</div>
+				<button id="submit">submit</button>
+			</form>
 		</div>
-		
-		<label for="title" class="form-label">Titulo</label>
-		<div class="input-group mb-3">
-		  <input th:field=*{title} type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="picture" class="form-label">Imagen</label>
-		<div style="width: 200px; height: 200px;">
-			<img width="100%" height="100%" style="object-fit:contain;" alt="" th:src="*{'/update/'+picture}">
-		
-		</div>
-		<div class="input-group mb-3">
-		  <input th:field=*{picture} type="text" class="form-control" placeholder="picture" name="picture" aria-label="picture" aria-describedby="basic-addon1">
-		  <input type="file" name="image"/>
-		</div>
-		
-		<label for="subtitle" class="form-label">SubTitulo</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{subtitle}" type="text" class="form-control" placeholder="subtitle" name="subtitle" aria-label="subtitle" aria-describedby="basic-addon1">
-		</div>
-		
-		<label for="category" class="form-label">Categoria</label>
-		<div class="input-group mb-3">
-		  <select class="form-select form-control" name="category" aria-label="Default select example" th:field="*{category}">
-			  <option th:each="c : ${category}" th:value=" ${c.id}" th:text="${c.title}"></option>
-			</select>
-		</div>
-		
-		<label for="subcategory" class="form-label">SubCategoria</label>
-		<div class="input-group mb-3">
-		  <select class="form-select form-control" name="subCategory" aria-label="Default select example" th:field="*{subCategory}">
-				  <option th:each="s : ${subcategory}"  th:value="${s.id}" th:text="${s.title}"></option>				   
-			</select>
-		</div>
-		
-		<div class="input-group mb-3">
-		  <span class="input-group-text">$</span>
-		  <input th:field="*{unit_price}" type="text" class="form-control" name="unit_price" aria-label="Amount (to the nearest dollar)">
-		  <span class="input-group-text">.00</span>
-		  
-		  <span class="input-group-text">Total</span>
-		  <input th:field="*{current_price}" type="text" class="form-control" name="current_price" aria-label="Amount (to the nearest dollar)">
-		  <span class="input-group-text">.00</span>
-		  
-			<span class="input-group-text">TAX</span>
-		  <input th:field="*{iva_price}" type="text" class="form-control"  name="iva_price" aria-label="Amount (to the nearest dollar)">
-		  <span class="input-group-text">%</span>
-		</div>
-		
-		<div class="input-group mb-3" >
-		  <span class="input-group-text">Descripcion</span>
-		  <textarea class="form-control" aria-label="With textarea" name="description" th:field="*{description}"></textarea>
-		</div>
-		
-		<div class="input-group mb-3">
-		  <span class="input-group-text">Resumen</span>
-		  <textarea class="form-control" aria-label="With textarea" name="textSummary" th:field="*{textSummary}"></textarea>
-		</div>
-		
-		<div class="input-group mb-3">
-		  <span class="input-group-text">Info</span>
-		  <textarea class="form-control" aria-label="With textarea"  name="info" th:field="*{info}"></textarea>
-		</div>
-		
-		<label>Stock</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{stock}" type="text" class="form-control"  name="stock">
-		</div>
-		<button id="submit">submit</button>
-	</form>
-</div>
-<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
- <script src="/script.js"></script>
+	</div>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="/script.js"></script>
 </body>
+
 </html>
