--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -1,48 +1,54 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-	<header id="header"></header>
-	<div class="container">
-		<table border="1" class="table">
-             <thead>
-                 <tr>
-                 	<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
-                 	<th>Cod</th>
-                     <th>Titulo</th>
-                     <th>Categoria</th>
-                     <th>SubCategoria</th>
-                     <th>Precio actual</th>
-                     <th>Precio unitario</th>
-                     <th>IVA %</th>
-                     <th>Stock</th>
-                 </tr>
-             </thead>
-                <tbody>
-                    <tr th:each="p : ${products}" th:data-href="${p.id}" th:style="${p.cssStyle}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
+	<div id="root">
+
+		<div th:replace="sidebar :: div#sidebar"></div>
+
+		<div id="detail">
+			<table border="1" class="table">
+				<thead>
+					<tr>
+						<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
+						<th>Cod</th>
+						<th>Titulo</th>
+						<th>Categoria</th>
+						<th>SubCategoria</th>
+						<th>Precio actual</th>
+						<th>Precio unitario</th>
+						<th>IVA %</th>
+						<th>Stock</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="p : ${products}" th:data-href="${p.id}" th:style="${p.cssStyle}"
+						ondblclick="location.href=location.pathname+'/'+this.dataset.href">
 						<td><input type="checkbox" name="product" th:value="${p.id}" th:data-id="${p.id}"></td>
 						<td th:text="${p.cod}"></td>
-                        <td th:text="${p.title}"></td>
-                        <td th:text="${p.category.title}"></td>
-                        <td th:text="${p.subCategory.title}"></td>
-                        <td th:text="${p.current_price}"></td>
-                        <td th:text="${p.unit_price}"></td>
-                        <td th:text="${p.iva_price}+'%'"></td>
-                        <td th:text="${p.stock}"></td>
-                        <td> <a th:href="'/admin/product/'+ ${p.id}"><button class="btn btn-warning">Editar</button></a></td>
-                        <td> <button class="btn btn-danger" onclick="deleteItem(this)" th:data-id="${p.id}">Eliminar</button></td>
-                    </tr>
-                </tbody>
-            </table>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-			<a href="/admin/product/0"><button class="btn btn-primary">Agregar</button></a>
-			<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+						<td th:text="${p.title}"></td>
+						<td th:text="${p.category.title}"></td>
+						<td th:text="${p.subCategory.title}"></td>
+						<td th:text="${p.current_price}"></td>
+						<td th:text="${p.unit_price}"></td>
+						<td th:text="${p.iva_price}+'%'"></td>
+						<td th:text="${p.stock}"></td>
+						<td> <a th:href="'/admin/product/'+ ${p.id}"><button class="btn btn-warning">Editar</button></a>
+						</td>
+						<td> <button class="btn btn-danger" onclick="deleteItem(this)"
+								th:data-id="${p.id}">Eliminar</button></td>
+					</tr>
+				</tbody>
+			</table>
+			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+				<a href="/admin/product/0"><button class="btn btn-primary">Agregar</button></a>
+				<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+			</div>
 		</div>
 	</div>
-    <script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
 	<script src="/script.js"></script>
 </body>
+
 </html>
