--- a/src/main/resources/templates/purchase_list.html
+++ b/src/main/resources/templates/purchase_list.html
@@ -1,49 +1,83 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- <link rel="stylesheet" href="/css/style.css">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-	<header id="header"></header>
-	<div class="container">
-		<table border="1" class="table table-sm">
-             <thead>
-                 <tr>
-                 	<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
-                 	<th>Codigo</th>
-                     <th>Usuario</th>
-                     <th>Fecha</th>
-                     <th>Precio total</th>
-                     <th>Metodo de pago</th>
-                     <th>Tipo</th>
-                     <th>Precio total</th>
-                     <th>status</th>
-                 </tr>
-             </thead>
-                <tbody>
-                    <tr th:each="p : ${Purchases}" th:class="${p.cssClass}" th:style="${p.cssStyle}" th:data-href="${p.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
+
+	<div id="root">
+
+		<div th:replace="sidebar :: div#sidebar"></div>
+
+		<div id="detail">
+			<div>
+				<form action="/admin/purchase" method="get">
+					<input type="text" placeholder="status" id="status" name="status" />
+					<input type="text" placeholder="amount" id="amount" name="amount" />
+					<button>Filtrar</button>
+					<input type="reset" value="clean">
+				</form>
+
+			</div>
+			<table border="1" class="table table-sm">
+				<thead>
+					<tr>
+						<th> <input type="checkbox" name="all" onclick="checkAll(this)"> </th>
+						<th>Codigo</th>
+						<th>Usuario</th>
+						<th>Fecha</th>
+						<th>Precio total</th>
+						<th>Metodo de pago</th>
+						<th>Tipo</th>
+						<th>Precio total</th>
+						<th>status</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="p : ${Purchases}" th:class="${p.cssClass}" th:style="${p.cssStyle}"
+						th:data-href="${p.id}" ondblclick="location.href=location.pathname+'/'+this.dataset.href">
 						<td><input type="checkbox" name="product" th:value="${p.id}" th:data-id="${p.id}"></td>
 						<td th:text="${p.purchaseId}"></td>
-                        <td th:text="${p.user.username}"></td>
-                        <td th:text="${p.date}"></td>
-                        <td th:text="${p.amount}"></td>
-                        <td th:text="${p.paymentMethodId}"></td>
-                        <td th:text="${p.paymentTypeId}"></td>
-                        <td th:text="${p.amountTotal}"></td>
-                        <td th:text="${p.status}"></td>
-                        <td> <a th:href="'/admin/purchase/'+ ${p.id}"><button class="btn btn-warning">Editar</button></a></td>
-                        <td> <button class="btn btn-danger" onclick="deleteItem(this)" th:data-id="${p.id}">Eliminar</button></td>
-                    </tr>
-                </tbody>
-            </table>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-			<a href="/admin/purchase/0"><button class="btn btn-primary">Agregar</button></a>
-			<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+						<td th:text="${p.user.username}"></td>
+						<td th:text="${p.date}"></td>
+						<td th:text="${p.amount}"></td>
+						<td th:text="${p.paymentMethodId}"></td>
+						<td th:text="${p.paymentTypeId}"></td>
+						<td th:text="${p.amountTotal}"></td>
+						<td th:text="${p.status}"></td>
+						<td> <a th:href="'/admin/purchase/'+ ${p.id}"><button
+									class="btn btn-warning">Editar</button></a></td>
+						<td> <button class="btn btn-danger" onclick="deleteItem(this)"
+								th:data-id="${p.id}">Eliminar</button></td>
+					</tr>
+				</tbody>
+			</table>
+			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+				<a href="/admin/purchase/0"><button class="btn btn-primary">Agregar</button></a>
+				<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+			</div>
+
+			<div class="d-flex justify-content-center">
+				<ul class="pagination">
+					<li class="page-item">
+						<a class="page-link" href="#" aria-label="Previous">
+							<span aria-hidden="true">&laquo;</span>
+						</a>
+					</li>
+					<li class="page-item"><a class="page-link" href="/admin/purchase?page=1">1</a></li>
+					<li class="page-item"><a class="page-link" href="/admin/purchase?page=2">2</a></li>
+					<li class="page-item"><a class="page-link" href="/admin/purchase?page=3">3</a></li>
+					<li class="page-item">
+						<a class="page-link" href="#" aria-label="Next">
+							<span aria-hidden="true">&raquo;</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+
 		</div>
 	</div>
-    <script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
 	<script src="/script.js"></script>
 </body>
+
 </html>
