--- a/src/main/resources/templates/subcategory.html
+++ b/src/main/resources/templates/subcategory.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-<header id="header"></header>
-<div class="container">
-	<form  id="form" th:action="@{/admin/subcategory}" method="post" th:object="${subcategory}">
-		
-		<input type="text" th:field="*{id}" hidden="hidden">
-		<label for="title" class="form-label">Titulo</label>
-		<div class="input-group mb-3">
-		  <input th:field="*{title}" type="text" class="form-control" placeholder="title" name="title" aria-label="title" aria-describedby="basic-addon1">
+	<div id="root">
+
+		<div th:replace="sidebar :: div#sidebar"></div>
+
+		<div id="detail">
+			<form id="form" th:action="@{/admin/subcategory}" method="post" th:object="${subcategory}">
+
+				<input type="text" th:field="*{id}" hidden="hidden">
+				<label for="title" class="form-label">Titulo</label>
+				<div class="input-group mb-3">
+					<input th:field="*{title}" type="text" class="form-control" placeholder="title" name="title"
+						aria-label="title" aria-describedby="basic-addon1">
+				</div>
+				<label for="category" class="form-label">Categoria</label>
+				<div class="input-group mb-3">
+					<select class="form-select" aria-label="Default select example" th:field="*{category}">
+						<option th:each="c : ${categories}" th:value="${c.id}" th:text="${c.title}"></option>
+					</select>
+				</div>
+
+				<button>submit</button>
+
+			</form>
 		</div>
-		<label for="category" class="form-label">Categoria</label>
-		<div class="input-group mb-3">
-		  <select class="form-select" aria-label="Default select example" th:field="*{category}">
-			  <option th:each="c : ${categories}" th:value="${c.id}" th:text="${c.title}"></option>
-			</select>
-		</div>
-		
-		<button>submit</button>
-		
-	</form>
-</div>
-<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
-<script src="/script.js"></script>
+	</div>
+	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
+	<script src="/script.js"></script>
 </body>
+
 </html>
