--- a/src/main/resources/templates/subcategory_list.html
+++ b/src/main/resources/templates/subcategory_list.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Admin</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+<head th:replace="head :: head"></head>
+
 <body>
-	<header id="header"></header>
-	<div class="container">
-	
-		<table border="1" class="table">
-	         <thead>
-	             <tr>
-	             	<th></th>
-	             	<th>id</th>
-	                <th>Titulo</th>
-	                <th>Category</th>
-	             </tr>
-	         </thead>
-             <tbody>
-                 <tr th:each="c : ${subcategories}">
-					<td><input type="checkbox" name="product" th:value="${c.id}"></td>
-					<td th:text="${c.id}"></td>
-                    <td th:text="${c.title}"></td>
-					<td th:text="${c.category.title}"></td>
-                     <td> <a th:href="'/admin/subcategory/'+ ${c.id}"><button class="btn btn-warning">Editar</button></a></td>
-                     <td><button class="btn btn-danger" onclick="deleteItem(this)" th:data-id="${c.id}">Eliminar</button></td>
-                 </tr>
-			</tbody>
-		</table>
-		
-		<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-			<a href="/admin/subcategory/0"><button class="btn btn-primary">Agregar</button></a>
+	<div id="root">
+
+		<div th:replace="sidebar :: div#sidebar"></div>
+
+		<div id="detail">
+
+			<table border="1" class="table">
+				<thead>
+					<tr>
+						<th></th>
+						<th>id</th>
+						<th>Titulo</th>
+						<th>Category</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="c : ${subcategories}">
+						<td><input type="checkbox" name="product" th:value="${c.id}"></td>
+						<td th:text="${c.id}"></td>
+						<td th:text="${c.title}"></td>
+						<td th:text="${c.category.title}"></td>
+						<td> <a th:href="'/admin/subcategory/'+ ${c.id}"><button
+									class="btn btn-warning">Editar</button></a></td>
+						<td><button class="btn btn-danger" onclick="deleteItem(this)"
+								th:data-id="${c.id}">Eliminar</button></td>
+					</tr>
+				</tbody>
+			</table>
+
+			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+				<a href="/admin/subcategory/0"><button class="btn btn-primary">Agregar</button></a>
+			</div>
 		</div>
 	</div>
-	
+
 	<script src="https://d34a9flj5lovc9.cloudfront.net/web/js/jquery-1.10.2.js.gz"></script>
 	<script src="/script.js"></script>
 </body>
+
 </html>
