--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -44,6 +44,7 @@
 			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
 				<a href="/admin/product/0"><button class="btn btn-primary">Agregar</button></a>
 				<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+				<button class="btn btn-primary" onclick="downloadExcel('/admin/productExcel')">Descargar</button>
 			</div>
 		</div>
 	</div>
