--- a/src/main/resources/templates/purchase_list.html
+++ b/src/main/resources/templates/purchase_list.html
@@ -54,6 +54,7 @@
 			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
 				<a href="/admin/purchase/0"><button class="btn btn-primary">Agregar</button></a>
 				<button class="btn btn-primary" onclick="getChecked()">Modificar</button>
+				<button class="btn btn-primary" onclick="downloadExcel('/admin/purchaseExcel')">Descargar</button>
 			</div>
 
 			<div class="d-flex justify-content-center">
