add auth in admin

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,6 +33,11 @@
     line-height: 1;
 }
 
+#sidebar form{
+    display: flex;
+    order: 2;
+}
+
 #sidebar > div {
     display: flex;
     align-items: center;
