--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -4,6 +4,9 @@
 
 	<div id="sidebar">
 		<h1>NewCommerce Admin</h1>
+		<form action="/logout">
+			<button class="btn btn-danger">Logout</button>
+		</form>
 		<div>
 			<form id="search-form" role="search">
 				<input id="q" aria-label="Search contacts" placeholder="Search" type="search" name="q" />
